ingress/nemo-entity-store/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nemo-entity-store-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nemo-entity-store.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nemo-entity-store
                port:
                  number: 8000
